fixed z-index issue with promo bar being overlapped by card content

--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ a {
   text-align: center;
   background: var(--accent);
   transition: top 0.5s;
-  z-index: 2;
+  z-index: 3;
 }
 
 #promobar .content-bounds {
